--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 html {
   margin: 0px;
   padding: 0px;
-  background-color: black;
   scroll-behavior: smooth;
 }
 body {
@@ -38,7 +37,7 @@ i {
   justify-content: center;
 }
 nav {
-  background-color: rgba(46, 107, 117, 0.5);
+  background-color: rgba(53, 92, 98, 0.5);
   display: flex;
   justify-content: center;
   position: fixed;
@@ -67,7 +66,7 @@ nav a:hover {
   align-items: center;
 }
 #welcome-section {
-  background-color: cadetblue;
+  background-color: darkcyan;
   margin: 0px;
   width: 100%;
   height: 100vh;
@@ -101,7 +100,7 @@ nav a:hover {
   font-size: 1.6rem;
   margin: 0px;
   padding: 0px;
-  background-color: rgba(46, 107, 117, 0.6);
+  background-color: rgba(39, 125, 138, 0.6);
   transition: transform 0.3s ease-out;
 }
 .proyect-tile:hover {
